<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerInParent="true"
    android:clickable="true"
    android:layout_marginTop="-8dp"
    android:layout_marginBottom="-8dp"
	android:padding="@dimen/widget_padding"
    android:src="@drawable/ic_launcher" >

    <TextView
        android:id="@+id/quoteHeader"
	    android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/quoteHeader"
        android:textStyle="italic"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/quoteOfTheDay"
		android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/quoteHeader"
		android:layout_marginTop="-4dp"
        android:text="@string/quoteText"
        android:textStyle="bold"
        android:textSize="12sp" />

	<TextView
        android:id="@+id/emptyLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/quoteOfTheDay"
        android:textSize="3sp" />
        
    <TextView
        android:id="@+id/topicHeader"
	    android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/emptyLine"
        android:text="@string/topicHeader"
        android:textStyle="italic"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/topicOfTheWeek"
	    android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/topicHeader"
		android:layout_marginTop="-4dp"
        android:text="@string/topicText"
        android:textStyle="bold"
        android:textSize="12sp" />

</RelativeLayout>